--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 			<h2>
 				<button onclick="alert('Hệ thống đang phát triển!')"><a href=""> Bình luận </a></button>
 
-				<button><a href="https://ngocrongonline.com/?c=gallery"> Hướng dẫn </a></button>
+				<button><a href="https://ngocrongonline.com/?c=gallery" target="_blank"> Hướng dẫn </a></button>
 
-				<button><a href="https://www.facebook.com/ngoc.rong.online.9/"> Fanpage </a></button>
+				<button><a href="https://www.facebook.com/ngoc.rong.online.9/" target="_blank"> Fanpage </a></button>
 
-				<button><a href="https://pay.teamobi.com/?game=nr&name="> Nạp ngọc </a></button>
+				<button><a href="https://pay.teamobi.com/?game=nr&name=" target="_blank"> Nạp ngọc </a></button>
 			</h2>
 
 		<!-- Nội dung -->
@@ -72,15 +72,15 @@
 			<p>	Tải game tại đây </p>
 				<!--đường link tải-->
 				<h5>
-					<button><a href="http://dlworld.teamobi.com/?type=1"> JAVA </a></button>
+					<button><a href="http://dlworld.teamobi.com/?type=1" target="_blank"> JAVA </a></button>
 
-					<button><a href="http://dl.teamobi.com/drive/get/Zz"> Android APK </a></button>
+					<button><a href="http://dl.teamobi.com/drive/get/Zz" target="_blank"> Android APK </a></button>
 
-					<button><a href="https://play.google.com/store/apps/details?id=com.bluedragonss.boysss&pli=1"> CH Play </a></button>
+					<button><a href="https://play.google.com/store/apps/details?id=com.bluedragonss.boysss&pli=1" target="_blank"> CH Play </a></button>
 
-					<button><a href="http://dl.teamobi.com/drive/get/Zx"> Windows </a></button>
+					<button><a href="http://dl.teamobi.com/drive/get/Zx" target="_blank"> Windows </a></button>
 
-					<button><a href="https://testflight.apple.com/join/0U4Dz7ne"> iOS </a></button>
+					<button><a href="https://testflight.apple.com/join/0U4Dz7ne" target="_blank"> iOS </a></button>
 				</h5>
 		</div>				
 </body>
