--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<!-- Ảnh -->
 		<center>
-			<img src="D:\671340_TranQuocDung\images\huong-dan-doi-mat-khau-game-ngoc-rong-online-2020-don-gian-nhat-4.jpg" class ="image">
+			<img src="D:\671340_TranQuocDung\images\huong-dan-doi-mat-khau-game-ngoc-rong-online-2020-don-gian-nhat-4.jpg">
 		</center>
 
 		<!-- Nút thay đổi trang danh mục -->
